# phoney

./: .env  .env.example  AWS-DEPLOYMENT-CHECKLIST.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  TUTORIAL.md  aws-serverless-deployment-plan.md  docker-compose.yml  examples_simple_api.py  plan.md  pyproject.toml  requirements.txt  test.txt
.github/workflows/: auto-merge.yml  codeql-analysis.yml  deploy-aws.yml  docker.yml  python-package.yml  release.yml
aws-infrastructure/: README.md
aws-infrastructure/cdk/: cdk.json  package.json
aws-infrastructure/docker/: Dockerfile  lambda_handler.py  requirements.txt
aws-infrastructure/monitoring/: alarms.tf  cloudwatch-dashboard.json  log-insights-queries.txt
aws-infrastructure/scripts/: deploy.sh
examples/: README.md  curl_examples.sh  jest_example.js  pytest_example.py  template_examples.py
phoney/app/: main.py
phoney/app/apis/: generator.py  models.py  provider.py  template_engine.py
phoney/app/core/: auth.py  config.py  security.py
phoney/app/routes/: views.py
tests/: .env.test  conftest.py  test_api.py  test_config.py  test_core_auth.py  test_generator.py  test_integration.py  test_phoney.py  test_provider.py  test_security.py  test_template_api.py  test_template_core.py  test_template_engine.py
