[tool.poetry]
name = "phoney"
version = "0.1.0"
description = "Test data generator API"
authors = ["JP White <jpwhite3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
faker = "^22.0.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
python-multipart = "^0.0.18"
httpx = "^0.27.0"  # Required for TestClient
pytest-mock = "^3.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
ruff = "^0.1.0"
isort = "^5.13.0"
mypy = "^1.6.0"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies.pytest-asyncio]
version = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I", "C4", "C90", "N", "UP", "S"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
